# app/Http/Controllers/Api/RoomController.php
@@ -2,82 +2,55 @@
 
 namespace App\Http\Controllers\Api;
 
+use App\Http\Requests\CreateRoomRequest;
+use App\Http\Resources\RoomResource;
 use App\Models\Room;
 use Illuminate\Http\Request;
 
 class RoomController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
     public function index()
     {
-        return Room::paginate(20);
+        $perPage = request()->query('per-page', 20);
+        $title = request()->query('title', '');
+        $building = request()->query('building', '');
+        $unit = request()->query('unit', '');
+
+        $qb = Room::with('category');
+        if ($title) {
+            $qb->where('title', 'like', "{$title}%");
+        }
+
+        if ($building) {
+            $qb->where('building', $building);
+        }
+
+        if ($unit) {
+            $qb->where('unit', $unit);
+        }
+
+        $paginator = $qb->paginate($perPage);
+
+        return RoomResource::collection($paginator);
     }
 
-    /**
-     * Show the form for creating a new resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function create()
+    public function store(CreateRoomRequest $request)
     {
-        //
+        Room::create($request->all());
+        return $this->created();
     }
 
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
-    public function store(Request $request)
+    public function show($id)
     {
-        //
+        $room = Room::with(['category', 'area'])->find($id);
+        return new RoomResource($room);
     }
 
-    /**
-     * Display the specified resource.
-     *
-     * @param  \App\Room  $room
-     * @return \Illuminate\Http\Response
-     */
-    public function show(Room $room)
-    {
-        //
-    }
-
-    /**
-     * Show the form for editing the specified resource.
-     *
-     * @param  \App\Room  $room
-     * @return \Illuminate\Http\Response
-     */
-    public function edit(Room $room)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  \App\Room  $room
-     * @return \Illuminate\Http\Response
-     */
     public function update(Request $request, Room $room)
     {
         //
     }
 
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  \App\Room  $room
-     * @return \Illuminate\Http\Response
-     */
     public function destroy(Room $room)
     {
         //
